--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Binaural Beat Generator</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./binaural_beats_generator_style.css" type="text/css">
-<link rel="stylesheet" href="/code/css/sironam_box_style.css" type="text/css">
+<link rel="stylesheet" href="./sironam_box_style.css" type="text/css">
 </head>
 <body>
 <button class="btn btn-gradient-border btn-glow">Binaural Beat Generator</button>
